testing with normal durations on llv, not 2x durations
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -276,7 +276,7 @@ An incentive for merchants to join this scheme is to attract customers with the 
   \label{fig:fulfilled_by_amazon_table}
 \end{figure}
 
-\subsubsection{Amazon Prime Air}
+\subsubsection{TODO: Amazon Prime Air}
 
 
 
@@ -588,6 +588,11 @@ blabla
 
 %**********************************************%
 \newpage
+\section{TODO: London Snapshot Generation}
+blabla
+
+%**********************************************%
+\newpage
 \section{TODO: Scheduling Deliveries}
 blabla
 
@@ -600,6 +605,11 @@ To gain greater understanding of how drones can positively impact industries, si
 
 \subsection{Time Value Functions}
 In order to consider how to maximise profitability, we introduce the concept of a Time Value Function (TVF). Rather than deal with the fixed pricing model of delivery fees as we see in the current day, we propose a new mechanism where the cost of the delivery is a function of the time taken to do said delivery. For example, a user may pay £5 for a delivery within 30 minutes but might be charged nothing if it takes longer than one hour.\\
+
+%**********************************************%
+\newpage
+\section{TODO: Large Scale Simulation of London}
+blabla
 
 %**********************************************%
 \newpage
