updated notebook to reflect that revenue is now in £ not pence
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/codebase/analysis/analysis.ipynb
+++ b/codebase/analysis/analysis.ipynb
@@ -35,7 +35,7 @@
     "    minval = df['dt1'].min()\n",
     "    df['dt1'] = df['dt1'].apply(lambda x: x - minval)\n",
     "    df = df.sort_values(by='dt1')\n",
-    "    df['profit'] = ((df['revenue'] - df['costs'])/100) - df['penalties']\n",
+    "    df['profit'] = df['revenue'] - df['penalties'] - (df['costs']/100)\n",
     "    df['avgDelTime'] = df['avgDelTime'] / 60\n",
     "    df['avgWaitTime'] = df['avgWaitTime'] / 60\n",
     "    df['delTimes'] = df['avgDelTime'] - df['avgWaitTime']\n",
